syntax = "proto3";

service DIDAProccessCreatorService {
  rpc CreateProccessInstance (CreateProccessInstanceRequest) returns (CreateProccessInstanceReply);
}

message CreateProccessInstanceRequest {
	string serverId = 1;
	string url = 2;
}

message CreateProccessInstanceReply {
	bool ack = 1;
}
